--- a/VG500/Slide/tex/preamble.tex
+++ b/VG500/Slide/tex/preamble.tex
@@ -19,6 +19,8 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{graphicx}
+\usepackage{bbding}
+\usepackage{multicol}
 
 \makeatletter
 \defbeamertemplate*{note page}{mynotes}
