--- a/VG500/Slide/tex/preamble.tex
+++ b/VG500/Slide/tex/preamble.tex
@@ -2,7 +2,7 @@
 
 \usepackage{thumbpdf}
 \usepackage{wasysym}
-\usepackage{ucs}
+%\usepackage{ucs}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[T2A]{fontenc}
@@ -19,8 +19,11 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{graphicx}
-\usepackage{bbding}
+%\usepackage{bbding}
 \usepackage{multicol}
+\usepackage[hyperref=true,backend=biber,sorting=none,backref=true]{biblatex}
+\addbibresource{ref.bib}
+
 
 \makeatletter
 \defbeamertemplate*{note page}{mynotes}
