add some citation

--- a/VG500/Slide/tex/main.tex
+++ b/VG500/Slide/tex/main.tex
@@ -23,7 +23,7 @@
 			Meaningful to practical systems:
 			\begin{enumerate}[(a)]
 				\item 
-				Improve efficiency, meet demanding standards.
+				Improve efficiency, meet demanding standards\cite{RN1}.
 				\item
 				Reduce pollution, environment friendly.
 			\end{enumerate}
@@ -70,7 +70,7 @@
 				\item
 					Designed especially for LES, with tfewer approximation.
 				\item
-					Relations are provided through scaling law, which is based on DNS database.
+					Relations are provided through scaling law, which is based on DNS database\cite{RN2}.
 			\end{itemize}		
 		\end{xframe}
 \section{Turbulent Flamelet Model}
@@ -134,7 +134,7 @@
 				\item
 					One of the most convincing testing cases.
 				\item
-					Difference and transition position are clearly revealed! 
+					Difference and transition position are clearly revealed\cite{RN11}.
 			\end{itemize}			
 			\includegraphics[width=11cm, height=6cm]{../pic/Tmax.jpg}	
 		\end{xframe}
@@ -153,9 +153,7 @@
 			\end{figure}
 		\end{xframe}
 
-	\subsection{part3.3}
-		\begin{xframe}{Reference}
-			\printbibliography
-		\end{xframe}
-
+	\begin{xframe}{Reference}
+		\printbibliography
+	\end{xframe}
 \end{document}
