--- a/VG500/Slide/tex/preamble.tex
+++ b/VG500/Slide/tex/preamble.tex
@@ -21,8 +21,10 @@
 \usepackage{graphicx}
 %\usepackage{bbding}
 \usepackage{multicol}
+\usepackage{hyperref}
 \usepackage[hyperref=true,backend=biber,sorting=none,backref=true]{biblatex}
 \addbibresource{ref.bib}
+\setbeamertemplate{bibliography item}[text]
 
 
 \makeatletter
