--- a/VM552/HW3/submission.tex
+++ b/VM552/HW3/submission.tex
@@ -75,7 +75,7 @@
 			Q: Investigate and explain how does the hall sensors in the ABS work to measure the wheel velocity in a reasonable accuracy? Note that the sensor is essentially a low-resolution position sensor.
 		
 		\item 
-			A: A typical configuration is shown as Fig(\ref{fig:hall}). Each time a gear teeth is opposed to the magnet, a peak voltage is generated. Thus the velocity can be measured from the gap between two pauses.
+			A: A typical configuration is shown as Fig(\ref{fig:hall}). Each time a gear teeth is opposed to the magnet, a peak voltage is generated. Thus the velocity can be measured from the gap between two pulse. Despite the low-resolution property of hall sensor, the velocity accuracy is refined by increasing the number of teeth when the radius of gear is fixed.
 			
 			\begin{figure}[!htbp]
 				\centering
